# auto-hotkey

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.yaml  AutoHotkey-terms.txt  AutoHotkeyx.props  AutoHotkeyx.sln  AutoHotkeyx.vcxproj  AutoHotkeyx.vcxproj.filters  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README-LIB.md  README.md  build.cmd  cspell.config.yaml  cspell.json  debug.natvis  taskfile.yaml  vsc-build-env.cmd
.github/: dependabot.yml
.github/workflows/: cmake-multi-platform.yml  cmake.yml  codeql.yml  msbuild.yml
config/: All CTest.run.xml  auto-hotkey-dictionary.txt  auto-hotkey-tests.cmake  auto-hotkey.cmake  auto-hotkey.dict  auto_hotkey.run.xml  build.cmd  pcre.cmake
docs/: ahk-library.md
source/: ahklib.cpp  ahkversion.h  application.cpp  application.h  clipboard.cpp  config.h  defines.h  globaldata.cpp  globaldata.h  hook.cpp  hook.h  hotkey.cpp  hotkey.h  input_object.cpp  keyboard_mouse.cpp  script.cpp  script.h  script2.cpp  script_com.cpp  script_expression.cpp  script_gui.cpp  script_module.cpp  script_object.h  stdafx.h  util.cpp  util.h  window.cpp
source/lib/: CCallback.cpp  input.cpp  pixel.cpp  process.cpp  string.cpp  vars.cpp  wait.cpp
source/lib_pcre/: lib_pcre.vcxproj
source/lib_pcre/pcre/: ChangeLog  pcre_compile.c  pcre_internal.h  pcre_jit_compile.c
source/lib_pcre/pcre/sljit/: sljitNativeX86_common.c
source/libx64call/: README.md
source/resources/: AutoHotkey.exe.manifest  AutoHotkey.rc
source/scripts/: .jshintrc  build.cmd  minman.js  minman.wsf  vsbuild.cmd  vsdev.cmd
source/tests/: common_tests.cpp
