cmake_minimum_required(VERSION 3.27)
project(auto_hotkey)

set(CMAKE_CXX_STANDARD 14)

include_directories(source)
include_directories(source/lib)
include_directories(source/lib_pcre)
include_directories(source/lib_pcre/pcre)
include_directories(source/lib_pcre/pcre/sljit)
include_directories(source/libx64call)
include_directories(source/resources)
include_directories(source/scripts)


set(AHK_SOURCE_FILES
        source/lib/CCallback.cpp
        source/lib/DllCall.cpp
        source/lib/drive.cpp
        source/lib/env.cpp
        source/lib/file.cpp
        source/lib/functions.h
        source/lib/Gui.ListView.cpp
        source/lib/Gui.StatusBar.cpp
        source/lib/Gui.TreeView.cpp
        source/lib/input.cpp
        source/lib/InputBox.cpp
        source/lib/interop.cpp
        source/lib/math.cpp
        source/lib/pixel.cpp
        source/lib/process.cpp
        source/lib/regex.cpp
        source/lib/sound.cpp
        source/lib/string.cpp
        source/lib/vars.cpp
        source/lib/wait.cpp
        source/lib/win.cpp
        source/lib_pcre/pcre/sljit/sljitConfig.h
        source/lib_pcre/pcre/sljit/sljitConfigInternal.h
        source/lib_pcre/pcre/sljit/sljitExecAllocator.c
        source/lib_pcre/pcre/sljit/sljitLir.c
        source/lib_pcre/pcre/sljit/sljitLir.h
        source/lib_pcre/pcre/sljit/sljitUtils.c
        source/lib_pcre/pcre/config.h
        source/lib_pcre/pcre/pcre.h
        source/lib_pcre/pcre/pcre16_chartables.c
        source/lib_pcre/pcre/pcre16_compile.c
        source/lib_pcre/pcre/pcre16_config.c
        source/lib_pcre/pcre/pcre16_exec.c
        source/lib_pcre/pcre/pcre16_fullinfo.c
        source/lib_pcre/pcre/pcre16_get.c
        source/lib_pcre/pcre/pcre16_globals.c
        source/lib_pcre/pcre/pcre16_jit_compile.c
        source/lib_pcre/pcre/pcre16_newline.c
        source/lib_pcre/pcre/pcre16_ord2utf16.c
        source/lib_pcre/pcre/pcre16_refcount.c
        source/lib_pcre/pcre/pcre16_string_utils.c
        source/lib_pcre/pcre/pcre16_study.c
        source/lib_pcre/pcre/pcre16_tables.c
        source/lib_pcre/pcre/pcre16_ucd.c
        source/lib_pcre/pcre/pcre16_valid_utf16.c
        source/lib_pcre/pcre/pcre16_version.c
        source/lib_pcre/pcre/pcre16_xclass.c
        source/lib_pcre/pcre/pcre_chartables.c
        source/lib_pcre/pcre/pcre_compile.c
        source/lib_pcre/pcre/pcre_config.c
        source/lib_pcre/pcre/pcre_dfa_exec.c
        source/lib_pcre/pcre/pcre_exec.c
        source/lib_pcre/pcre/pcre_fullinfo.c
        source/lib_pcre/pcre/pcre_get.c
        source/lib_pcre/pcre/pcre_globals.c
        source/lib_pcre/pcre/pcre_internal.h
        source/lib_pcre/pcre/pcre_jit_compile.c
        source/lib_pcre/pcre/pcre_maketables.c
        source/lib_pcre/pcre/pcre_newline.c
        source/lib_pcre/pcre/pcre_ord2utf8.c
        source/lib_pcre/pcre/pcre_refcount.c
        source/lib_pcre/pcre/pcre_string_utils.c
        source/lib_pcre/pcre/pcre_study.c
        source/lib_pcre/pcre/pcre_tables.c
        source/lib_pcre/pcre/pcre_ucd.c
        source/lib_pcre/pcre/pcre_valid_utf8.c
        source/lib_pcre/pcre/pcre_version.c
        source/lib_pcre/pcre/pcre_xclass.c
        source/lib_pcre/pcre/pcret.h
        source/lib_pcre/pcre/ucp.h
        source/resources/resource.h
        source/abi.h
        source/ahklib.cpp
        source/ahklib.idl
        source/ahkversion.cpp
        source/ahkversion.h
        source/application.cpp
        source/application.h
        source/AutoHotkey.cpp
        source/clipboard.cpp
        source/clipboard.h
        source/config.h
        source/cpp.hint
        source/debug.h
        source/Debugger.cpp
        source/Debugger.h
        source/defines.h
        source/DispObject.h
        source/error.cpp
        source/globaldata.cpp
        source/globaldata.h
        source/hook.cpp
        source/hook.h
        source/hotkey.cpp
        source/hotkey.h
        source/input_object.cpp
        source/input_object.h
        source/keyboard_mouse.cpp
        source/keyboard_mouse.h
        source/KuString.h
        source/map.h
        source/MdFunc.cpp
        source/MdFunc.h
        source/MdType.h
        source/os_version.cpp
        source/os_version.h
        source/pch.cpp
        source/pch_min.cpp
        source/qmath.h
        source/script.cpp
        source/script.h
        source/script2.cpp
        source/script_autoit.cpp
        source/script_com.cpp
        source/script_com.h
        source/script_expression.cpp
        source/script_func_impl.h
        source/script_gui.cpp
        source/script_menu.cpp
        source/script_object.cpp
        source/script_object.h
        source/script_object_bif.cpp
        source/script_registry.cpp
        source/SimpleHeap.cpp
        source/SimpleHeap.h
        source/stdafx.h
        source/StringConv.cpp
        source/StringConv.h
        source/StrRet.h
        source/TextIO.cpp
        source/TextIO.h
        source/util.cpp
        source/util.h
        source/var.cpp
        source/var.h
        source/window.cpp
        source/window.h
        source/WinGroup.cpp
        source/WinGroup.h
        source/lib_pcre/pcre/sljit/sljitNativeX86_common.c
)
set (AHK_X86_SOURCE_FILES
        source/lib_pcre/pcre/sljit/sljitNativeX86_32.c
        source/x86call.asm
)
set (AHK_X64_SOURCE_FILES
        source/lib_pcre/pcre/sljit/sljitNativeX86_64.c
        source/libx64call/x64call.asm
        source/libx64call/x64stub.asm
)
set (AHK_PROJECT_FILES
        .gitattributes
        .gitignore
        cspell.json
        debug.natvis
        LICENSE
        README-LIB.md
        README.md
        vsc-build-env.cmd
        source/libx64call/HowToCompile.txt
)
set (AHK_RESOURCE_FILES
        source/scripts/minman.js
)
add_executable(auto_hotkey ${AHK_SOURCE_FILES})
set_target_properties(auto_hotkey
        PROPERTIES COMPILE_FLAGS "-DHAVE_CONFIG_H=1 -DUNICODE -D_UNICODE -DLINK_SIZE=4 -DSLJIT_INLINE=inline        -DSLJIT_CONFIG_AUTO=1            -DSLJIT_VERBOSE=0 -DSLJIT_DEBUG=0 -DSLJIT_CONFIG_X86_64=1 -DSLJIT_CONFIG_AUTO=0 -DLINK_SIZE=4 -DSLJIT_VERBOSE=0 -DSLJIT_DEBUG=0         -DSLJIT_CONFIG_X86=0 -DSLJIT_CONFIG_X86_32=0 -DSLJIT_CONFIG_X86_64=1 -DSLJIT_CONFIG_UNSUPPORTED=0         -DSLJIT_CONFIG_DEBUG=0 -DSLJIT_CONFIG_STATIC=1 -DPC")

